# Veridica

./: .gitignore  LICENCE  pyproject.toml  readme.md
.github/workflows/: publish.yml
src/veridica/: batch.py  normalisation.py  similarity.py  timing.py
test/: levenstein_batch_test.py  levenstein_damerau_test.py  levenstein_test.py  normalisation_test.py  timing_test.py
