[tool.poetry]
name = "veridica"
version = "0.1.2"
description = "Fuzzy matching for the use in gherkin based automated tests."
authors = ["Sebastiaan Swanenberg <pythonveridica@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^24.9"
isort = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
